# Alphanus

./: .gitignore  Cargo.toml  MANIFEST.in  README.md  SKILLS_GUIDE.md  TechSpec.md  deny.toml  main.py  pyproject.toml  pyrightconfig.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
agent/: classifier.py  constants.py  context.py  core.py  llm_client.py  orchestrator.py  policies.py  prompts.py  telemetry.py  types.py
bundled-skills/app-control/: SKILL.md  tools.py
bundled-skills/browser-control/: SKILL.md  tools.py
bundled-skills/document-tools/: SKILL.md  tools.py
bundled-skills/git/: SKILL.md  tools.py
bundled-skills/local-search/: SKILL.md  tools.py
bundled-skills/memory-rag/: SKILL.md  tools.py
bundled-skills/project-ops/: SKILL.md  tools.py
bundled-skills/screenshot-ocr/: SKILL.md  tools.py
bundled-skills/search-ops/: SKILL.md  search_engine.py  tools.py
bundled-skills/shell-ops/: SKILL.md  tools.py
bundled-skills/utilities/: SKILL.md  tools.py
bundled-skills/workspace-ops/: SKILL.md  tools.py
config/: global_config.json  models_config.json
core/: attachments.py  configuration.py  conv_tree.py  memory.py  sessions.py  skill_loader.py  skill_parser.py  skills.py  streaming.py  tool_script.py  workspace.py
scripts/: live_smoke.py
skills/: __init__.py
skills/git/: tools.py
skills/memory-rag/: SKILL.md  prompt.md  skill.toml  tools.py
skills/search-ops/: SKILL.md  tools.py
skills/shell-ops/: SKILL.md  prompt.md  skill.toml  tools.py
skills/utilities/: SKILL.md  prompt.md  skill.toml  tools.py
skills/workspace-ops/: SKILL.md  prompt.md  skill.toml  tools.py
src/: alphanus_cli.py  alphanus_paths.py
src-rust/: app.rs  backend.rs  input.rs  lib.rs  protocol.rs  theme.rs  tool_preview.rs
src-rust/app/: interactions.rs  reducer.rs  render.rs
src-rust/snapshots/: _alphanus_tui__app__tests__snapshot_120x40.snap  _alphanus_tui__app__tests__snapshot_160x50.snap  _alphanus_tui__app__tests__snapshot_80x24.snap
src/agent/: backend_profiles.py  classifier.py  config_values.py  context.py  core.py  evidence_guard.py  file_audit.py  finalization_engine.py  harness_metrics.py  llm_client.py  orchestrator.py  policies.py  prompts.py  provider.py  provider_failure_policy.py  provider_metadata.py  provider_payload.py  provider_stream_parser.py  response_finalizer.py  runtime_hooks.py  telemetry.py  tool_execution_engine.py  tool_history.py  tool_loop_engine.py  turn_journal.py  turn_policy_engine.py  types.py
src/alphanus/: __init__.py  cli.py  console.py  paths.py  runtime_factory.py
src/core/: attachments.py  backend_profiles.py  coercion.py  config_model.py  configuration.py  conv_tree.py  endpoint_modes.py  errors.py  headless_protocol.py  memory.py  message_types.py  project.py  project_command_policy.py  project_search.py  retrieval.py  runtime_config.py  runtime_protocol.py  runtime_server.py  runtime_views.py  sandbox.py  search_providers.py  secure_io.py  sessions.py  skill_discovery.py  skill_executor.py  skill_inventory.py  skill_parser.py  skill_process_env.py  skill_registry.py  skill_run_validation.py  skill_script_inspector.py  skill_selector.py  skill_tool_schema.py  skill_types.py  skills.py  streaming.py  theme_catalog.py  themes.py  tool_results.py  tree_render.py  (+4 more)
src/skills/: __init__.py  runtime.py  skill_discovery.py  skill_executor.py  skill_inventory.py  skill_parser.py  skill_process_env.py  skill_registry.py  skill_run_validation.py  skill_script_inspector.py  skill_selector.py  skill_tool_policy.py  skill_tool_schema.py
src/tui/: activity_runtime.py  app_shell_runtime.py  attachment_runtime.py  chat_input.py  command_output_runtime.py  command_palette_runtime.py  command_runtime.py  commands.py  config_runtime.py  file_audit_runtime.py  interaction_runtime.py  interface.py  interface_input_runtime.py  live_tool_preview.py  markdown_utils.py  navigation_runtime.py  palette_theme_runtime.py  popups.py  session_runtime.py  sidebar.py  status.py  status_runtime.py  stream_runtime.py  theme_controller.py  themes.py  transcript.py  transcript_runtime.py  tree_render.py  ui_styles.py  view_runtime.py
tests/: __init__.py  conftest.py  support.py  test_agent_config_values.py  test_agent_loop.py  test_agent_policy.py  test_agent_prompts.py  test_agent_status.py  test_agent_streaming.py  test_agent_tools.py  test_agent_types.py  test_app_paths.py  test_backend_model_integrity.py  test_cli.py  test_code_metrics.py  test_config_system.py  test_context_config.py  test_conv_tree.py  test_desktop_skills.py  test_file_audit.py  test_git_skill.py  test_harness_metrics.py  test_import_cycles.py  test_interface.py  test_live_tool_preview.py  test_markdown_utils.py  test_memory.py  test_packaging.py  test_performance_benchmarks.py  test_production_v1.py  test_project.py  test_project_ops.py  test_prompts.py  test_provider_stream_parser.py  test_ratatui_pty.py  test_retrieval_hybrid.py  test_runtime_classification.py  test_runtime_execution.py  test_runtime_modules.py  test_runtime_protocol.py  (+16 more)
tools/: benchmark_hotpaths.py  code_budget.json  code_metrics.py  vulture_whitelist.py
tui/: commands.py  interface.py  live_tool_preview.py  markdown_utils.py  popups.py  sidebar.py  status.py
whatsapp/: bridge.py  sessions.py
(+67 files in other folders)
