[project]
name = "alphanus"
version = "0.1.4"
description = "Personal on-device AI coding assistant with Textual TUI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "textual>=0.60",
  "PyYAML>=6.0.2",
]

[project.scripts]
alphanus = "alphanus_cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2",
  "pytest-mock>=3.15.1",
  "ruff>=0.12.9",
  "pyright>=1.1.402",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.setuptools]
package-dir = {"" = "src", "alphanus_bundled" = "skills"}
packages = ["agent", "core", "tui", "alphanus_bundled"]
py-modules = ["alphanus_cli", "alphanus_paths"]

[tool.setuptools.package-data]
alphanus_bundled = ["**/*"]

[tool.uv]
package = true
