[project]
name = "alphanus"
version = "0.1.4"
description = "Personal on-device AI coding assistant with Textual TUI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "textual>=0.60",
  "PyYAML>=6.0.2",
]

[project.scripts]
alphanus = "alphanus_cli:main"

[project.optional-dependencies]
desktop = [
  "pypdf>=4.0",
  "python-docx>=1.1",
  "Pillow>=10.0",
  "pytesseract>=0.3.10",
]
dev = [
  "pytest>=9.0.2",
  "pytest-mock>=3.15.1",
  "pytest-benchmark>=5.1.0",
  "anyio>=4.9.0",
  "ruff>=0.12.9",
  "pyright>=1.1.402",
  "vulture>=2.11",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.setuptools]
package-dir = {"" = "src", "alphanus_bundled" = "bundled-skills"}
packages = ["agent", "core", "tui", "skills", "alphanus_bundled"]
py-modules = ["alphanus_cli", "alphanus_paths"]

[tool.setuptools.package-data]
alphanus_bundled = ["**/*"]
tui = ["theme_specs/*.json"]

[tool.uv]
package = true

[tool.vulture]
paths = ["src", "bundled-skills", "tests", "tools/vulture_whitelist.py"]
min_confidence = 80
