[build-system]
requires = ["setuptools>=80", "setuptools-rust>=1.11"]
build-backend = "setuptools.build_meta"

[project]
name = "alphanus"
version = "0.2.0"
description = "Alpha on-device AI coding assistant with a Rust Ratatui interface"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.11,<3",
  "PyYAML>=6.0.2",
  "tomli-w>=1.2,<2",
]

[project.scripts]
alphanus = "alphanus_cli:main"

[project.optional-dependencies]
desktop = [
  "pypdf>=6.13.3",
  "python-docx>=1.1",
  "Pillow>=12.3.0",
  "pytesseract>=0.3.10",
]
dev = [
  "pytest>=9.0.2",
  "pytest-mock>=3.15.1",
  "pytest-benchmark>=5.1.0",
  "anyio>=4.9.0",
  "ruff>=0.12.9",
  "pyright>=1.1.402",
  "vulture>=2.11",
  "pytest-cov>=6.2",
  "pip-audit>=2.9",
  "setuptools-rust>=1.11",
  "idna>=3.15",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
  "benchmark: performance benchmarks excluded from the default CI test job",
  "integration: tests that exercise multiple runtime subsystems",
  "security: policy, sandbox, and hostile-input tests",
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.setuptools]
package-dir = {"" = "src", "alphanus_bundled" = "bundled-skills"}
packages = ["agent", "core", "skills", "alphanus_bundled"]
py-modules = ["alphanus_cli", "alphanus_paths"]
include-package-data = false

[tool.setuptools.package-data]
alphanus_bundled = ["**/*"]
core = ["theme_specs/*.json"]

[[tool.setuptools-rust.ext-modules]]
target = "_alphanus_tui"
path = "Cargo.toml"
binding = "PyO3"
py-limited-api = "cp311"

[tool.setuptools.exclude-package-data]
"*" = ["**/__pycache__/*", "**/*.pyc"]

[tool.uv]
package = true

[tool.vulture]
paths = ["src", "bundled-skills", "tests", "tools/vulture_whitelist.py"]
min_confidence = 80
